--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -3,8 +3,54 @@
   width: 300px;
 }
 
+ul {
+  list-style: none;
+}
+
+.self-quote__intro {
+    min-height: 144px;
+    padding: 30px;
+}
+
 .nav {
-  margin: 30px 0 20px 0;
+    width:300px;
+}
+
+div.main-nav__fixed{
+  position: absolute;
+top: 0;
+left: 0;
+bottom: 0;
+background: #FF847C;
+height: auto;
+width: 300px;
+color: white;
+font-size: 1.7em;
+font-family: Merriweather,serif;
+}
+
+ul.main-menu__list{
+    margin-top: 10px;
+    padding: 0;
+}
+
+ul.main-menu__list li:first-child{
+    border-top: 1px solid #FDCEA9;
+}
+
+ul.main-menu__list li{
+    border-bottom: 1px solid #FDCEA9;
+    padding: 15px 0px;
+}
+
+ul.main-menu__list li a{
+    color: white;
+    text-decoration: none;
+    padding-left: 30px;
+}
+
+ul.main-menu__list li a:hover{
+    opacity: 0.8;
 }
 
 .users-pagination {
