--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -9,24 +9,37 @@ ul {
 
 .self-quote__intro {
     min-height: 144px;
-    padding: 30px;
+    padding: 30px 30px 25px 15px;
 }
 
-.nav {
-    width:300px;
+.nav li a:hover{
+    background-color: inherit;
+}
+
+.nav li a:focus{
+    background-color: inherit;
+    outline: inherit;
 }
 
 div.main-nav__fixed{
-  position: absolute;
-top: 0;
-left: 0;
-bottom: 0;
-background: #FF847C;
-height: auto;
-width: 300px;
-color: white;
-font-size: 1.7em;
-font-family: Merriweather,serif;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: #FF847C;
+    height: auto;
+    color: white;
+    font-size: 1.7em;
+    font-family: Merriweather,serif;
+}
+
+div.main-nav__fixed a{
+    color: white;
+    text-decoration: none;
+}
+
+div.main-nav__fixed a:hover{
+    opacity: 0.8;
 }
 
 ul.main-menu__list{
@@ -40,28 +53,9 @@ ul.main-menu__list li:first-child{
 
 ul.main-menu__list li{
     border-bottom: 1px solid #FDCEA9;
-    padding: 15px 0px;
+    padding: 7px 0px;
 }
 
-ul.main-menu__list li a{
-    color: white;
-    text-decoration: none;
-    padding-left: 30px;
-}
-
-ul.main-menu__list li a:hover{
-    opacity: 0.8;
-}
-
-.users-pagination {
-  margin-top: 0;
-}
-
-.page-user-edit form {
-  width: 500px;
-  margin-top: 40px;
-}
-
-th {
+/*th {
   background-image: url('/media/pattern.jpg');
-}
+}*/
