--- a/Client/src/stylesheets/main.css
+++ b/Client/src/stylesheets/main.css
@@ -11,6 +11,16 @@ ul {
   list-style: none;
 }
 
+a{
+    text-decoration: none;
+    color:rgba(240, 173, 78, 0.74);
+}
+
+a:hover{
+    text-decoration: none;
+    color:rgba(240, 173, 78, 1);
+}
+
 .self-quote__intro {
     min-height: 144px;
     padding: 30px 30px 25px 15px;
@@ -63,4 +73,14 @@ ul.main-menu__list li{
 
 .lolipop{
     background:yellow;
+}
+
+.pagination > li {
+    display: inline-block;
+    margin-right: 4px;
+}
+
+.pagination > .active > a {
+    background-color: #f4c47f;
+    border-color: #f5f5f5;
 }
