--- a/Client/src/views/Home/index.css
+++ b/Client/src/views/Home/index.css
@@ -1,10 +1,6 @@
 .home-container{
-    margin: 7px 0;
-    background: #fff;
-    padding: 3px 50px;
-    border-radius: 12px;
+    margin-top:12px;
 }
-
 .home-container ul{
     padding:0;
 }
@@ -13,6 +9,18 @@ ul.post-list{
 }
 
 ul.post-list li{
-    border-bottom: 1px solid #dff0d8;
-    padding: 25px 0;
+    border: 1px solid #e8e8e8;
+    background: #fff;
+    margin-bottom: 6px;
+    min-height: 150px;
+    border-right: 3px solid orange;
+}
+
+ul.post-list li:hover{
+    background:#f5f5f5;
+}
+
+
+ul.post-list div.post-wrapper{
+    padding: 20px 54px;
 }
